--- a/stack.tmpl
+++ b/stack.tmpl
@@ -10,16 +10,20 @@ func New{{.ShortTypeName}}() *{{.TypeName}} {
 	return &{{.TypeName}}{}
 }
 
-// Push a value to stack
+// Push a value to the stack.
 func (s *{{.TypeName}}) Push(value {{.Type}}) {
 	(*s) = append([]{{.Type}}{value}, (*s)...)
 }
 
-// Pop removes the most recently added item
-func (s *{{.TypeName}}) Pop() {{.Type}} {
+// Pop removes the most recently added item.
+// If called on an empty stack will return ErrEmptyStack error.
+func (s *{{.TypeName}}) Pop() ({{.Type}}, error) {
+	if len(*s) == 0 {
+		return {{.TypeZeroValue}}, ErrEmptyStack
+	}
 	value := (*s)[0]
 	(*s) = (*s)[1:]
-	return value
+	return value, nil
 }
 
 // Slice returns the stack contents as a slice of {{.Type}}'s.
@@ -28,8 +32,12 @@ func (s *{{.TypeName}}) Slice() []{{.Type}} {
 }
 
 // Peek returns the most recently added item.
-func (s *{{.TypeName}}) Peek() {{.Type}} {
-	return (*s)[0]
+// If called on an empty stack will return ErrEmptyStack error.
+func (s *{{.TypeName}}) Peek() ({{.Type}}, error) {
+	if len(*s) == 0 {
+		return {{.TypeZeroValue}}, ErrEmptyStack
+	}
+	return (*s)[0], nil
 }
 
 // IsEmpty returns true if the stack is empty.
