--- a/stack.tmpl
+++ b/stack.tmpl
@@ -5,8 +5,8 @@ package stack // import "kkn.fi/stack"
 // {{.TypeName}} is a stack data structure.
 type {{.TypeName}} []{{.Type}}
 
-// New{{.ShortTypeName}} creates an empty {{.Type}} stack.
-func New{{.ShortTypeName}}() *{{.TypeName}} {
+// New{{.TypeName}} creates an empty {{.Type}} stack.
+func New{{.TypeName}}() *{{.TypeName}} {
 	return &{{.TypeName}}{}
 }
 
